--- a/Practice code/mohammad_sina_workshop1.ipynb
+++ b/Practice code/mohammad_sina_workshop1.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNNOCj8p03h0T95iNiaTrG",
+      "collapsed_sections": [
+        "krm4gHwgpvp1"
+      ],
+      "authorship_tag": "ABX9TyMc9gqi8Y0FWSnHw1okMv8B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -80,7 +83,7 @@
         "id": "fyG4Psrkpqee",
         "outputId": "1903400e-848d-4f62-89e6-85ab46436cd1"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +127,7 @@
         "id": "ulQINoHgpogH",
         "outputId": "9f3fd44a-6b64-4ae6-e156-ab87203bf63e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +171,7 @@
         "id": "2YhsrqeSpmd3",
         "outputId": "a4b38a99-88c0-405f-f1cf-c5b63e30f658"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -208,7 +211,7 @@
         "id": "YcOVq3w8pmk_",
         "outputId": "020e50d6-02ee-403d-9356-d9b1f526254b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +251,7 @@
         "id": "BfpVveKJpm1L",
         "outputId": "25b4677b-582b-4d33-c470-252f87bd8990"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +280,7 @@
         "id": "bk1FgfsCpm8A",
         "outputId": "be1c2542-618e-40d3-8cf4-2790c29d8abe"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +310,7 @@
       "metadata": {
         "id": "gkn4iUMZpnCK"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -325,7 +328,7 @@
         "id": "IGQxd1htpnJd",
         "outputId": "ce17eed4-6b5f-4533-ab32-55b738d06e69"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +388,7 @@
         "id": "3-WYCyoGpnQZ",
         "outputId": "4e2fcbf2-5d99-4375-ac1c-ef4b6e769496"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -411,7 +414,7 @@
         "id": "NGtS-Rwcz8C3",
         "outputId": "f1ffd57a-5535-4e39-cf32-bf9f9319e1f7"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -426,112 +429,481 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# object oriented python"
+      ],
       "metadata": {
-        "id": "qlDztaspz8QP"
+        "id": "LhxEWYKq2jYl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "students_name = ['ali','hassan','mohammad']\n",
+        "pyhton_study_time = [3, 2, 4]\n",
+        "python_grade = [18, 17, 19]\n",
+        "java_study_time = [2, 2, 1]\n",
+        "java_grade = [14, 13, 15]"
+      ],
+      "metadata": {
+        "id": "z-moHUsq2uIf"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class student:\n",
+        "  def __init__(self,name):\n",
+        "    self.name = name\n",
+        "  def say_my_name(self):\n",
+        "    print(f'my name is {self.name}')"
+      ],
       "metadata": {
-        "id": "q2_e7Tu4z8ZE"
+        "id": "bfSShmYn2un-"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ali = student(name = 'ali')"
+      ],
       "metadata": {
-        "id": "UDLOiBosz8is"
+        "id": "7TQdoWD52vH3"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ali.say_my_name()"
+      ],
       "metadata": {
-        "id": "YciMivpAz8q3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mpXOqTiy2vMO",
+        "outputId": "a8aa1fd6-152b-45bd-a02d-48ae46ae8060"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "my name is ali\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# class student:\n",
+        "#   def __init__(self,name):\n",
+        "#     self.name = name\n",
+        "#   def say_my_name(self):   # dynamic method\n",
+        "#     print(f'my name is {self.name}')\n",
+        "#   def say_hello(self):   #static method\n",
+        "#     print('Helooooo...')\n",
+        "\n",
+        "\n",
+        "class student:\n",
+        "  def __init__(self,name):\n",
+        "    self.name = name\n",
+        "  def say_my_name(self):   # dynamic method\n",
+        "    print(f'my name is {self.name}')\n",
+        "\n",
+        "  @staticmethod\n",
+        "  def say_hello():   #static method\n",
+        "    print('Helooooo...')"
+      ],
+      "metadata": {
+        "id": "jEpkQ9ke2vRH"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ali = student(name = 'ali')\n",
+        "ali.say_hello()"
+      ],
       "metadata": {
-        "id": "DBUS-dfRz8yp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GIsLQh7W2vXB",
+        "outputId": "993e6349-1235-4c1e-cf93-fe07b9e5ace8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Helooooo...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## protected and private attribute\n",
+        "we can change it but it is a non written rule not to bother variables with _\n",
+        "we can use it inside the class though"
+      ],
+      "metadata": {
+        "id": "b4Vcdkr37LcW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class student:\n",
+        "  def __init__(self,name):\n",
+        "    self._name = name       # protected with _\n",
+        "  def say_my_name(self):   # dynamic method\n",
+        "    print(f'my name is {self._name}')\n",
+        "\n",
+        "  @staticmethod\n",
+        "  def say_hello():   #static method\n",
+        "    print('Helooooo...')"
+      ],
+      "metadata": {
+        "id": "piZpDUis2vcG"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class student:\n",
+        "  def __init__(self,name):\n",
+        "    self._name = name       # protected with _\n",
+        "    self.__name = name      # cannot change outside the class\n",
+        "  def say_my_name(self):   # dynamic method\n",
+        "    print(f'my name is {self.__name}')\n",
+        "\n",
+        "  @staticmethod\n",
+        "  def say_hello():   #static method\n",
+        "    print('Helooooo...')"
+      ],
       "metadata": {
-        "id": "1s0gRteSz863"
+        "id": "S7Cvt-vD2vga"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## inheritance"
+      ],
       "metadata": {
-        "id": "QzKQERmrz9DY"
+        "id": "M9B-ygy98K6H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class student:\n",
+        "  def __init__(self, name, number):\n",
+        "    self._name = name\n",
+        "    self._check_number(number)\n",
+        "    self._number = number\n",
+        "  def _check_number(self, number):\n",
+        "    if number % 4:    # شماره دانشجویی بخش پذیر بر 4 باشه اررو نده\n",
+        "      raise ValueError()\n",
+        "\n",
+        "class KntuStudent(student):\n",
+        "  def _check_number(self, number):\n",
+        "    if number % 5:    # شماره دانشجویی بخش پذیر بر 5 باشه اررو نده\n",
+        "      raise ValueError()  # اینجا داریم اوررایت میکنیم شرط بخش پذیری بر 4 رو در متد کلی میگیم خواجه نصیر بخش بر 5 هست"
+      ],
+      "metadata": {
+        "id": "XZ1UMMZF-AIp"
       },
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ali = KntuStudent('ali', 5)"
+      ],
       "metadata": {
-        "id": "VWvw6hKrz9MA"
+        "id": "MjAgoeGt2vnj"
       },
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ali._name"
+      ],
       "metadata": {
-        "id": "7_JSlEw6z9VW"
+        "id": "bzd4cxl_2vxD",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "ebc83fba-4fea-4573-e0a9-a214b4601ccc"
       },
-      "execution_count": null,
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'ali'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## magic method\n"
+      ],
+      "metadata": {
+        "id": "djmYP0U2Alkx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class student:\n",
+        "  def __init__(self, name, number):\n",
+        "    self._name = name\n",
+        "    self._check_number(number)\n",
+        "    self._number = number\n",
+        "  def _check_number(self, number):\n",
+        "    if number % 4:    # شماره دانشجویی بخش پذیر بر 4 باشه اررو نده\n",
+        "      raise ValueError()\n",
+        "  def __str__(self):\n",
+        "    return(f'student name is: {self._name} ')\n",
+        "  def __eq__(self, other):\n",
+        "    return self._number == other._number\n",
+        "  def __len__(self):\n",
+        "    return 10\n",
+        "\n",
+        "\n",
+        "class KntuStudent(student):\n",
+        "  def _check_number(self, number):\n",
+        "    if number % 5:    # شماره دانشجویی بخش پذیر بر 5 باشه اررو نده\n",
+        "      raise ValueError()  # اینجا داریم اوررایت میکنیم شرط بخش پذیری بر 4 رو در متد کلی میگیم خواجه نصیر بخش بر 5 هست"
+      ],
+      "metadata": {
+        "id": "FDWTGIpc2v6_"
+      },
+      "execution_count": 83,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ali = KntuStudent('ali', 5)"
+      ],
       "metadata": {
-        "id": "xHTiz6uqz9dD"
+        "id": "KdNhArgG2wCZ"
       },
-      "execution_count": null,
+      "execution_count": 84,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ali.__str__()  # we can use some of the methode is python by coding like this"
+      ],
       "metadata": {
-        "id": "W1KyuK9Yz9lf"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "m54OfyDLBYdq",
+        "outputId": "43c7402f-b227-49fa-ed61-751cc62db8c6"
       },
-      "execution_count": null,
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'student name is: ali '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str(ali)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "rugN2ctEBpJ_",
+        "outputId": "49d7d923-59da-43f1-d44c-40b9e778b9f2"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'student name is: ali '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ali2 = KntuStudent('ali', 5)"
+      ],
+      "metadata": {
+        "id": "G5Pp5BSECZoh"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "اگر شماره دانشجویی ها برابر بودن با هم یه دانشجو ان ولی اکر اسما یکی بودن شماره دانشجویی ها یکی نیستند دو نفر ان"
+      ],
+      "metadata": {
+        "id": "e1DobSNWCsIg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ali == ali2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NuHeqzWuCZ0F",
+        "outputId": "a85614fd-ee36-4d54-8a64-7324e3196a58"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ali3 = KntuStudent('ali', 10)"
+      ],
+      "metadata": {
+        "id": "f7LXS2wHCZ7P"
+      },
+      "execution_count": 79,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ali == ali3\n",
+        "# ali.__eq__(ali3)"
+      ],
       "metadata": {
-        "id": "ghTxzYrjz9sr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FLQCNNP_CaB2",
+        "outputId": "58fd448f-cfdc-498c-c413-e808dd195d50"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "یه عدد ثابت رو میده بهمون که مثلا اندازه یک لیست رو بهمون برمیگردونه در دیتاست ها کاربرد داره"
+      ],
+      "metadata": {
+        "id": "D4V6QBfkDTQh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(ali)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MQxw6QKLCaMN",
+        "outputId": "127b6bfd-57a1-4ceb-ff7b-40ce39ab121b"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
     }
   ]
 }
